First working version for Hackathon

--- a/docs/Plots.ipynb
+++ b/docs/Plots.ipynb
@@ -23,8 +23,8 @@
    },
    "outputs": [],
    "source": [
-    "FREQ_DIST_FILE = '../train-processed-freqdist.pkl'\n",
-    "BI_FREQ_DIST_FILE = '../train-processed-freqdist-bi.pkl'"
+    "FREQ_DIST_FILE = '/Users/chirag.vartak/learn/twitter-sentiment-analysis/dataset/raw-small-processed-freqdist.pkl'\n",
+    "BI_FREQ_DIST_FILE = '/Users/chirag.vartak/learn/twitter-sentiment-analysis/dataset/raw-small-processed-freqdist-bi.pkl'"
    ]
   },
   {
